{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 31,
  "lineage": "1128a020-af35-7b28-43e3-ad3829ec20e8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-092d6201380fbf667",
            "domain": "vpc",
            "id": "eipalloc-092d6201380fbf667",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-83-5-57.compute-1.amazonaws.com",
            "public_ip": "54.83.5.57",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08e4e35cccc6189f4",
            "arn": "arn:aws:ec2:us-east-1:293955714039:instance/i-00649c1593936dce9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00649c1593936dce9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vaibhawkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bbcaf05c9072e2b1",
            "private_dns": "ip-198-162-1-180.ec2.internal",
            "private_ip": "198.162.1.180",
            "public_dns": "ec2-54-152-86-60.compute-1.amazonaws.com",
            "public_ip": "54.152.86.60",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00dea7e7208e03237",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02ce23d2a7bb6fbb9",
            "tags": {
              "Environment": "development",
              "Name": "Server1",
              "Project": "TERRAFORM"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "Server1",
              "Project": "TERRAFORM"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-059c78ec5953a09f6"
            ]
          },
          "dependencies": [
            "aws_security_group.terraform_private_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:293955714039:internet-gateway/igw-0d1ac1ab4035c2107",
            "id": "igw-0d1ac1ab4035c2107",
            "owner_id": "293955714039",
            "tags": {
              "Name": "INTERNET_GATEWAY"
            },
            "tags_all": {
              "Name": "INTERNET_GATEWAY"
            },
            "vpc_id": "vpc-0f4bf442cae86cca5"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-092d6201380fbf667",
            "connectivity_type": "public",
            "id": "nat-0158caf0a1b269851",
            "network_interface_id": "eni-09ef43261455cd663",
            "private_ip": "198.162.1.186",
            "public_ip": "54.83.5.57",
            "subnet_id": "subnet-02ce23d2a7bb6fbb9",
            "tags": {
              "Name": "NAT"
            },
            "tags_all": {
              "Name": "NAT"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.ig",
            "aws_subnet.public_subnet",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d49c917b555ba8601080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0158caf0a1b269851",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d49c917b555ba860",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.ig",
            "aws_nat_gateway.nat",
            "aws_route_table.private1",
            "aws_subnet.public_subnet",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06769aee4c053e2d81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0158caf0a1b269851",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06769aee4c053e2d8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.ig",
            "aws_nat_gateway.nat",
            "aws_route_table.private2",
            "aws_subnet.public_subnet",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e04c70b73186c1981080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0158caf0a1b269851",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e04c70b73186c198",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.ig",
            "aws_nat_gateway.nat",
            "aws_route_table.private3",
            "aws_subnet.public_subnet",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08a3ad24368446c051080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0158caf0a1b269851",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08a3ad24368446c05",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.ig",
            "aws_nat_gateway.nat",
            "aws_route_table.private4",
            "aws_subnet.public_subnet",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d410761f196fb70e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0158caf0a1b269851",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d410761f196fb70e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.ig",
            "aws_nat_gateway.nat",
            "aws_route_table.private5",
            "aws_subnet.public_subnet",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d1ac1ab4035c2107",
            "id": "r-rtb-0b82dc36b6884829d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b82dc36b6884829d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.public",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:293955714039:route-table/rtb-0d49c917b555ba860",
            "id": "rtb-0d49c917b555ba860",
            "owner_id": "293955714039",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "PRIVATE_ROUTE_TABLE1"
            },
            "tags_all": {
              "Name": "PRIVATE_ROUTE_TABLE1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4bf442cae86cca5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:293955714039:route-table/rtb-06769aee4c053e2d8",
            "id": "rtb-06769aee4c053e2d8",
            "owner_id": "293955714039",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "PRIVATE_ROUTE_TABLE2"
            },
            "tags_all": {
              "Name": "PRIVATE_ROUTE_TABLE2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4bf442cae86cca5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:293955714039:route-table/rtb-0e04c70b73186c198",
            "id": "rtb-0e04c70b73186c198",
            "owner_id": "293955714039",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "PRIVATE_ROUTE_TABLE3"
            },
            "tags_all": {
              "Name": "PRIVATE_ROUTE_TABLE3"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4bf442cae86cca5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:293955714039:route-table/rtb-08a3ad24368446c05",
            "id": "rtb-08a3ad24368446c05",
            "owner_id": "293955714039",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "PRIVATE_ROUTE_TABLE4"
            },
            "tags_all": {
              "Name": "PRIVATE_ROUTE_TABLE4"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4bf442cae86cca5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:293955714039:route-table/rtb-0d410761f196fb70e",
            "id": "rtb-0d410761f196fb70e",
            "owner_id": "293955714039",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "PRIVATE_ROUTE_TABLE5"
            },
            "tags_all": {
              "Name": "PRIVATE_ROUTE_TABLE5"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4bf442cae86cca5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:293955714039:route-table/rtb-0b82dc36b6884829d",
            "id": "rtb-0b82dc36b6884829d",
            "owner_id": "293955714039",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "PUBLIC_ROUTE_TABLE"
            },
            "tags_all": {
              "Name": "PUBLIC_ROUTE_TABLE"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4bf442cae86cca5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd0573542087623d",
            "route_table_id": "rtb-0d49c917b555ba860",
            "subnet_id": "subnet-0b7fab9ab71b54022"
          },
          "dependencies": [
            "aws_route_table.private1",
            "aws_subnet.private_subnet1",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0372fde026912c57e",
            "route_table_id": "rtb-06769aee4c053e2d8",
            "subnet_id": "subnet-0c47ec9b888e10468"
          },
          "dependencies": [
            "aws_route_table.private2",
            "aws_subnet.private_subnet2",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bda55d27852d7601",
            "route_table_id": "rtb-0e04c70b73186c198",
            "subnet_id": "subnet-0affb410bc5be3f1b"
          },
          "dependencies": [
            "aws_route_table.private3",
            "aws_subnet.private_subnet3",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9773d5826d61215",
            "route_table_id": "rtb-08a3ad24368446c05",
            "subnet_id": "subnet-05bb6884adc899da6"
          },
          "dependencies": [
            "aws_route_table.private4",
            "aws_subnet.private_subnet4",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5570f99c24c4378",
            "route_table_id": "rtb-0d410761f196fb70e",
            "subnet_id": "subnet-04f61b77649c2b805"
          },
          "dependencies": [
            "aws_route_table.private5",
            "aws_subnet.private_subnet5",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013a21c1c44690125",
            "route_table_id": "rtb-0b82dc36b6884829d",
            "subnet_id": "subnet-02ce23d2a7bb6fbb9"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform_private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:293955714039:security-group/sg-059c78ec5953a09f6",
            "description": "Allow limited inbound external traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "49.37.153.103/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-059c78ec5953a09f6",
            "ingress": [
              {
                "cidr_blocks": [
                  "49.37.153.103/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform_ec2_private_sg",
            "name_prefix": "",
            "owner_id": "293955714039",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2-private-sg"
            },
            "tags_all": {
              "Name": "ec2-private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4bf442cae86cca5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:293955714039:subnet/subnet-0b7fab9ab71b54022",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "198.162.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b7fab9ab71b54022",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "293955714039",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_SUBNET1"
            },
            "tags_all": {
              "Name": "Private_SUBNET1"
            },
            "vpc_id": "vpc-0f4bf442cae86cca5"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:293955714039:subnet/subnet-0c47ec9b888e10468",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "198.162.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c47ec9b888e10468",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "293955714039",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_SUBNET2"
            },
            "tags_all": {
              "Name": "Private_SUBNET2"
            },
            "vpc_id": "vpc-0f4bf442cae86cca5"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:293955714039:subnet/subnet-0affb410bc5be3f1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "198.162.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0affb410bc5be3f1b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "293955714039",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_SUBNET3"
            },
            "tags_all": {
              "Name": "Private_SUBNET3"
            },
            "vpc_id": "vpc-0f4bf442cae86cca5"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:293955714039:subnet/subnet-05bb6884adc899da6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "198.162.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05bb6884adc899da6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "293955714039",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_SUBNET4"
            },
            "tags_all": {
              "Name": "Private_SUBNET4"
            },
            "vpc_id": "vpc-0f4bf442cae86cca5"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:293955714039:subnet/subnet-04f61b77649c2b805",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "198.162.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f61b77649c2b805",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "293955714039",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_SUBNET5"
            },
            "tags_all": {
              "Name": "Private_SUBNET5"
            },
            "vpc_id": "vpc-0f4bf442cae86cca5"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:293955714039:subnet/subnet-02ce23d2a7bb6fbb9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "198.162.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ce23d2a7bb6fbb9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "293955714039",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PUBLIC_SUBNET"
            },
            "tags_all": {
              "Name": "PUBLIC_SUBNET"
            },
            "vpc_id": "vpc-0f4bf442cae86cca5"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:293955714039:vpc/vpc-0f4bf442cae86cca5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "198.162.0.0/16",
            "default_network_acl_id": "acl-0d38f94916b751ee4",
            "default_route_table_id": "rtb-05b027d1e86323e82",
            "default_security_group_id": "sg-0a621949b1014644d",
            "dhcp_options_id": "dopt-0d58fc8a40d04e533",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f4bf442cae86cca5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05b027d1e86323e82",
            "owner_id": "293955714039",
            "tags": {
              "Name": "server-vpc"
            },
            "tags_all": {
              "Name": "server-vpc"
            }
          }
        }
      ]
    }
  ]
}